# gradient-bang-headless

./: .env.example  .gitignore  .gitmodules  AGENTS.md  HEADLESS_PLAN.md  HEADLESS_RULES.md  NARRATIVE.md  README.md  STRATEGY.md  pyproject.toml
bridge/: README.md  package-lock.json  package.json
bridge/src/: browser_controller.mjs  browser_daily_bridge.mjs  browser_page_runtime.mjs  controller.mjs  noop_media_manager.mjs  raw_transport.mjs  runtime.mjs
src/gradient_bang_headless/: __init__.py  bridge.py  browser.py  cli.py  config.py  frontend_prompts.py  http.py  session_loop.py  upstream.py
