[project]
name = "gradient-bang-headless"
version = "0.1.0"
description = "Headless client scaffold for Gradient Bang"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
gb-headless = "gradient_bang_headless.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
